# form

./: .clangd  .gitattributes  .gitignore  CHANGELOG.md  CITATION.bib  CMakeLists.txt  LICENSE  README.md  pyproject.toml  vcpkg.json
.github/: release-please-config.json
.github/scripts/: vcpkg.sh
.github/workflows/: ci.yml  on_main.yml  on_pr.yml  reusable_build.yml  reusable_build_ros.yml  reusable_checks.yml
config/: 25.10.03_full.yaml  25.10.03_short_verify.yaml  25.10.03_verify_works.yaml  25.10.08_short_verify.yaml  25.10.29_update_spires.yaml
experiments/: ablations.py  ablations_figure.py  area_under_curve.py  baseline_figure.py  baseline_tables.py  baseline_tables_speed.py  env.py  features_viz.py  header_viz.py  readme_viz.py  readme_viz.tex  window_size.py
form/: constraints.cpp  constraints.hpp  form.cpp  form.hpp  map.hpp  point_types.hpp  utils.hpp
form/feature/: extraction.hpp  extraction.tpp  factor.cpp  factor.hpp  features.hpp  type.hpp
form/mapping/: keyscanner.cpp  keyscanner.hpp  map.cpp  map.hpp  map.tpp  scan_handler.cpp  scan_handler.hpp
form/optimization/: constraints.cpp  constraints.hpp  gtsam.h  gtsam.hpp  matcher.hpp
python/: CMakeLists.txt  bindings.cpp
ros/: CMakeLists.txt  LICENSE  README.md  package.xml  pc2_conversions.h  pixi.toml
ros/launch/: odometry.launch.py
ros/rviz/: form.rviz
ros/src/: OdometryServer.cpp  OdometryServer.hpp  Utils.hpp  format.hpp  node.cpp  node.hpp  ros_pc2.h  utils.hpp
scripts/: feature_param_tuning.py
tests/: CMakeLists.txt  test_SeparateFactor.cpp
