<?xml version="1.0"?>
<package format="3">
  <name>form</name>
  <version>0.1.2</version>
  <description>FORM: Fixed-lag Odometry with Reparative Mapping - ROS 2 Wrapper</description>
  <maintainer email="potokar@cmu.edu">Easton Potokar</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rcutils</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>

  <depend>eigen</depend>
  <depend>gtsam</depend>
  <depend>tbb</depend>
  <depend>robin-map-dev</depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
